[gd_scene load_steps=9 format=2]

[ext_resource path="res://Other/Fonts/lemon/19919.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/Menus/SaveMenu/SaveFileButton.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Menus/SaveMenu/SaveFileButtonHover.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Menus/SaveMenu/SaveFileButtonPressed.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Menus/MainMenuSprites.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Menus/MainMenu/MainMenu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 6 )

[node name="MainMenuSprites" parent="." instance=ExtResource( 5 )]

[node name="Title" type="Control" parent="."]
margin_left = -251.468
margin_top = -245.318
margin_right = 228.532
margin_bottom = -104.318
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiggoTextTitle" type="RichTextLabel" parent="Title"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -60.5
margin_bottom = 60.5
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=2][color=yellow]Diggo[/color][/wave]"
text = "Diggo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Title"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -45.0
margin_right = 90.0
margin_bottom = 45.0
color = Color( 0.372549, 0.247059, 0.0509804, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -200.0
margin_top = -75.0
margin_right = 600.0
margin_bottom = 578.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="TextureButton" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 160.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameText" type="RichTextLabel" parent="VBoxContainer/NewGameButton"]
margin_top = -18.0
margin_right = 800.0
margin_bottom = 156.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=2][color=#00ff80][center]New game[/center][/color][/wave]"
text = "New game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 220.0
margin_right = 800.0
margin_bottom = 380.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueText" type="RichTextLabel" parent="VBoxContainer/ContinueButton"]
margin_top = -18.0
margin_right = 800.0
margin_bottom = 156.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=2][color=#00ff80][center]Continue[/center][/color][/wave]"
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 440.0
margin_right = 800.0
margin_bottom = 600.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitText" type="RichTextLabel" parent="VBoxContainer/QuitButton"]
margin_top = -18.0
margin_right = 800.0
margin_bottom = 156.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=2][color=#ff5050][center]Quit[/center][/color][/wave]"
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
